UTIL-276 Fix issue with unit testing modules