@@ -13,10 +13,9 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<coverage-level>1.00</coverage-level>
+		<java.version>                         17   </java.version>
 
 		<maven-compiler-plugin.verion>      3.8.1   </maven-compiler-plugin.verion>
-		<java.version>                         17   </java.version>
 		<maven-surefire-plugin.version>  3.0.0-M8   </maven-surefire-plugin.version>
 		<checkstyle-plugin.version>         3.1.2   </checkstyle-plugin.version>
 		<checkstyle.version>               10.6.0   </checkstyle.version>
@@ -24,7 +23,8 @@
 		<jacoco.version>                    0.8.8   </jacoco.version>
 		<maven-release-plugin.version>   3.0.0-M7   </maven-release-plugin.version>
 
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<coverage-level>                     1.00   </coverage-level>
+		<project.build.sourceEncoding>      UTF-8   </project.build.sourceEncoding>
 	</properties>
 
 	<modules>
@@ -65,13 +65,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.jupiter</groupId>
-						<artifactId>junit-jupiter-engine</artifactId>
-						<version>${junit.version}</version>
-					</dependency>
-				</dependencies>
+				<configuration>
+					<argLine>
+						<!-- Hopefully this can be removed in future surefire versions -->
+						--add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+						--add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
